[tool.poetry]
name = "booking_service"
version = "0.0.1"
description = "Booking Service: Booking System – Simplify Your Grooming Experience"
authors = ['Farai Wande <faraiwande@gmail.com>']

[tool.poetry.dependencies]
python = "^3.13"
Flask = "^3.1.0"
python-dotenv = "^1.1.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"